# reits50_system

./: CMakeLists.txt  LICENSE  README.md
config/: reits_index_rule.json
data/: reits_data.csv
docs/: design.md  test_guide.md
src/: main.cpp
src/compliance/: ComplianceReporter.cpp  ComplianceReporter.hpp
src/core/: IndexCalculator.cpp  IndexCalculator.hpp
src/data/: DataLoader.cpp  DataLoader.hpp
src/risk/: RiskEngine.cpp  RiskEngine.hpp
